--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Showcase</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -16,9 +16,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#profile">Profile</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
                 </li>
@@ -47,10 +44,10 @@
             <!-- Project Card -->
             <div class="col-md-4 mb-4">
                 <div class="card project-card shadow-sm" onclick="expandCard(this)">
-                    <img src="project1.jpg" class="card-img-top" alt="Project 1">
+                    <img src="assets/img/Pic1.png" class="card-img-top" alt="Project 1">
                     <div class="card-body">
-                        <h5 class="card-title">Project 1</h5>
-                        <p class="card-text">Languages: HTML, CSS, JavaScript</p>
+                        <h5 class="card-title">Address book </h5>
+                        <p class="card-text">Languages: Shell Script</p>
                     </div>
                 </div>
             </div>
@@ -88,7 +85,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="text-center">
-                        <img src="" id="modalImage" class="img-fluid mb-3" alt="Project Image">
+                        <img src="/assets/img/Pic1.png" id="modalImage" class="img-fluid mb-3" alt="Project Image">
                     </div>
                     <p id="modalDescription"></p>
                     <p><strong>Languages Used:</strong> <span id="modalLanguages"></span></p>
@@ -102,7 +99,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
  
