--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Showcase</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Raymond Maharjan </title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/icon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">My Portfolio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#projects">Projects</a>
-                </li>
-            </ul>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container d-flex justify-content-between align-items-center" style="margin-left: 20px;margin-right: 20px;">
+            <a class="navbar-brand" href="#">
+                <img src="https://bajratechnologies.com/web/image/website/1/logo/Bajra%20Technologies?unique=556ebe6" alt="Bajra Technologies Logo" width="90" height="45">
+            </a>
+            <div class="text-center flex-grow-1">
+                <span class="navbar-text" style="font-size: xx-large;">RAYMOND MAHARJAN</span>
+            </div>
+            <div>
+                <span class="navbar-text">PROJECTS</span>
+            </div>
         </div>
     </nav>
 
@@ -34,71 +34,64 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="container mt-5">
+    <div class="container my-5">
         <div class="row">
-            <div class="col-md-12 text-center mb-4">
-                <h2 class="display-5">My Projects</h2>
-            </div>
-        </div>
-        <div class="row">
-            <!-- Project Card -->
-            <div class="col-md-4 mb-4">
-                <div class="card project-card shadow-sm" onclick="expandCard(this)">
-                    <img src="assets/img/Pic1.png" class="card-img-top" alt="Project 1">
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100">
+                    <img src="/assets/img/Pic1.png" class="card-img-top" alt="Address Book">
                     <div class="card-body">
-                        <h5 class="card-title">Address book </h5>
-                        <p class="card-text">Languages: Shell Script</p>
+                        <h5 class="card-title">Address Book</h5>
+                        <p class="card-text">This is a Address book created using Shell Scripting.</p>
+                        <p class="card-text" style="font-size: small; margin: 0;"><strong>Language:</strong></p>
+                        <div class="d-flex mb-3">
+                            <span class="badge bg-danger">Shell</span>
+                        </div>
+                        <a href="https://github.com/rays63/Address_book_Shell" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
-            <!-- Repeat for other projects -->
-            <div class="col-md-4 mb-4">
-                <div class="card project-card shadow-sm" onclick="expandCard(this)">
-                    <img src="project2.jpg" class="card-img-top" alt="Project 2">
+
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100">
+                    <img src="/assets/img/inpro.jpg" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Project 2</h5>
-                        <p class="card-text">Languages: Python, Flask</p>
+                        <p class="card-text">Description of Project .</p>
+                        <p class="card-text" style="font-size: small; margin: 0;"><strong>Language:</strong></p>
+                        <div class="d-flex mb-3">
+                            <span class="badge bg-success">Shell</span>
+                            <span class="badge bg-secondary">Item 2</span>
+                        </div>
+                        <a href="" target="_blank" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mb-4">
-                <div class="card project-card shadow-sm" onclick="expandCard(this)">
-                    <img src="project3.jpg" class="card-img-top" alt="Project 3">
+
+            <div class="col-lg-4 mb-4">
+                <div class="card h-100">
+                    <img src="/assets/img/inpro.jpg" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
-                        <p class="card-text">Languages: Java, Spring</p>
+                        <p class="card-text">Description of Project 3.</p>
+                        <p class="card-text" style="font-size: small; margin: 0;"><strong>Language:</strong></p>
+                        <div class="d-flex mb-3">
+                            <span class="badge bg-primary">Item 1</span>
+                            <span class="badge bg-secondary">Item 2</span>
+                        </div>
+                        <a href="#" class="btn btn-primary">View Project</a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Modal -->
-    <div class="modal fade" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="projectModalLabel">Project Title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="text-center">
-                        <img src="/assets/img/Pic1.png" id="modalImage" class="img-fluid mb-3" alt="Project Image">
-                    </div>
-                    <p id="modalDescription"></p>
-                    <p><strong>Languages Used:</strong> <span id="modalLanguages"></span></p>
-                </div>
-                <div class="modal-footer">
-                    <a href="#" id="modalGithubLink" class="btn btn-primary" target="_blank">View on GitHub</a>
                 </div>
             </div>
         </div>
     </div>
 
+    <footer class="bg-danger text-white text-center py-4">
+        &copy; 2024 Raymond @ Bajra Technologies
+    </footer>
+    
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
 </html>
