UI: added in progress section

--- a/index.html
+++ b/index.html
@@ -46,10 +46,24 @@
                         <div class="d-flex mb-3">
                             <span class="badge bg-danger">Shell</span>
                         </div>
-                        <a href="https://github.com/rays63/Address_book_Shell" target="_blank" class="btn btn-primary">View Project</a>
+                        <a href="https://github.com/rays63/Address_book_Shell" target="_blank" class="btn btn-sgit uccess">View Project</a>
                     </div>
                 </div>
             </div>
+
+        </div>
+    </div>
+
+    <section id="profile" class="container mt-5">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1 class="display-4">In Progress</h1>
+            </div>
+        </div>
+    </section>
+
+    <div class="container my-5">
+        <div class="row">
 
             <div class="col-lg-4 mb-4">
                 <div class="card h-100">
