--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="d-flex mb-3">
                             <span class="badge bg-danger">Shell</span>
                         </div>
-                        <a href="https://github.com/rays63/Address_book_Shell" target="_blank" class="btn btn-sgit uccess">View Project</a>
+                        <a href="https://github.com/rays63/Address_book_Shell" target="_blank" class="btn btn-success">View Project</a>
                     </div>
                 </div>
             </div>
