Fix: image not showing

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="col-lg-4 mb-4">
                 <div class="card h-100">
-                    <img src=inpro.jpg" class="card-img-top" alt="">
+                    <img src="inpro.jpg" class="card-img-top" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
                         <p class="card-text">Description of Project 3.</p>
