--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raymond Maharjan </title>
-    <link rel="icon" type="image/x-icon" href="/img/icon.ico">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-lg-4 mb-4">
                 <div class="card h-100">
-                    <img src="/img/Pic1.png" class="card-img-top" alt="Address Book">
+                    <img src="Pic1.png" class="card-img-top" alt="Address Book">
                     <div class="card-body">
                         <h5 class="card-title">Address Book</h5>
                         <p class="card-text">This is a Address book created using Shell Scripting.</p>
